Fixed the homepage being too wide

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,22 +94,11 @@ body
 }
 .navbar-bottom
 {
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: 1030;
-
 	padding-left: 3rem !important;
 	padding-right: 3rem !important;
 }
 
 // Homepage styles
-.vertical-center
-{
-	margin-left: 10%;
-	margin-right: 10%;
-}
 .share-icon
 {
 	padding-left: 2.5%;
@@ -123,7 +112,12 @@ body
 {
 	text-align: center;
 }
-.homepage-top
+#homepage
+{
+	margin-left: 10%;
+	margin-right: 10%;
+}
+#homepage-top
 {
 	padding-top: 2%;
 	padding-bottom: 2%;
@@ -177,24 +171,10 @@ body
 		padding-bottom: 80px;
 	}
 
-	#contact-page
-	{
-		padding-top: 1rem !important;
-		padding-left: 1rem !important;
-		padding-right: 1rem !important;
-	}
-
 	#top-logo
 	{
 		padding-left: 0rem;
 	}
-
-	.vertical-center
-	{
-		margin-left: auto;
-		margin-right: auto;
-	}
-
 	#bottom-icon
 	{
 		width: 84px;
@@ -215,11 +195,6 @@ body
 		padding-right: 0.6rem !important;
 	}
 
-	#homepage-content
-	{
-		padding-bottom: 25%;
-	}
-
 	#signup
 	{
 		margin-top: 20px !important;
@@ -232,5 +207,23 @@ body
 	.btn-about
 	{
 		width: 50%;
+	}
+
+	#homepage
+	{
+		margin-left: 0;
+		margin-right: 0;
+	}
+	#homepage-content
+	{
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	#contact-page
+	{
+		padding-top: 1rem !important;
+		padding-left: 1rem !important;
+		padding-right: 1rem !important;
 	}
 }
